src/scss/_super-field.scss
@mixin super-field {
    .super-field {
        &.has-string-value.super-field-string-value-new {
            input {
                background-color: lighten($green-light, 20%);
            }
        }
    }

    .super-field-selector {
        padding: $standard-border-radius 0px;

        &.has-create {
            padding-bottom: 0px;
        }

        &.above {
            &.has-create {
                .notch {
                    border-top-color: $background-gray;
                }
            }
        }

        .list {
            overflow-y: scroll;
            overflow-x: hidden;
        }

        .option {
            $image-size: 16px;
            $option-padding: 5px;

            cursor: pointer;
            padding: $option-padding;
            border-bottom: 1px solid $background-gray;

            &:last-of-type {
                border-bottom-color: #fff;

                &:hover, &.highlighted {
                    border-bottom-color: $blue-xlight;
                }
            }

            &:hover, &.highlighted {
                background-color: $blue-xlight;
            }

            .name {
                text-overflow: ellipsis;
                line-height: $tight-line-height;
                height: $tight-line-height;
            }

            .meta {
                text-overflow: ellipsis;
                color: $blue-gray;
                @include small-font;
                line-height: $small-tight-line-height;
                height: $small-tight-line-height;
                text-overflow: ellipsis;
            }

            .image {
                position: absolute;
                top: $option-padding;
                left: $option-padding + ($line-height - $image-size)/2;

                img {
                    max-width: 100%;
                    max-height: 100%;
                }
            }

            .image-content {
                padding-left: $image-size + 2*$option-padding;
            }
        }

        .create {
            cursor: pointer;
            padding:  0px 5px;
            background: $background-gray;
            border-top: 1px solid $border-gray;
            border-bottom-left-radius: 2px;
            border-bottom-right-radius: 2px;

            svg {
                float: left;
                width: 12px;
                height: 12px;
                margin-top: ($line-height - 12px)/2;
                margin-right: 5px;
            }

            .svg-plus {
                fill: $green;
            }

            &:hover, &.highlighted {
                background-color: $blue-xlight;
            }
        }

        .status {
            padding: 0px 5px;
            color: $blue-gray;
        }

    }
}

